--- a/style.css
+++ b/style.css
@@ -265,3 +265,38 @@ p{
 #alert-button-close-4.active-filter-state{
     transform: scale(1.04);
 }
+#custom-alert-5{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px 10px;
+    margin-top: -175px;
+}
+.alert-buttons-5{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.button1{
+    height: 25px;
+    justify-content: center;
+    
+    transition: transform 0.1s ease;
+    border: none;
+    background-color: rgb(209, 209, 209);
+    border-radius: 5px 5px;
+    filter: drop-shadow(0 0 2px rgb(38, 29, 22));
+    font-family: Find Cartoon;
+}
+.button1:active{
+    transform: scale(1.07);
+}
